--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </audio><button class="music-btn" onclick="toggleMusic()">♫</button>
 
   <header>
-    <h1>Reza & Diva</h1>
+    <h1>Reza & Difa</h1>
     <p>Dengan penuh rasa syukur, kami mengundang Bapak/Ibu/Saudara/i</p>
     <div style="margin-top:14px">
       <button class="btn" onclick="hadir()">Hadir (<span id="hadir">0</span>)</button>
